# Project_4_Markov

./: CMakeLists.txt  README.txt  brute_model.h  map_model.cpp  map_model.h  markov.cpp  markov.h  word_model.cpp  word_model.h
